# lambda-mailer

./: LICENSE  README.md  api.py  lambda-mailer-policy-prod.json  message.json  pyproject.toml  requirements.txt  zappa_settings.json
